test/Fail/Issue4175.err
{ compare function types
  t1 = (Set → Set)
  t2 = (@0 Set → Set)
} (exception)
Issue4175.agda:14.16-17: error: [UnequalTypes]
The function type
  Set → Set
is not a subtype of
  @0 Set → Set
because:
  one has unrestricted domain, while the other is erased.
when checking that the expression F has type @0 Set → Set
